save before week 3

--- a/Project/website/templates/index_audio.html
+++ b/Project/website/templates/index_audio.html
@@ -118,7 +118,7 @@
       </form>
       <h2></h2>
       <h3>Key Texts: </h3>
-      <textbox name="output_text" id="output_text" maxlength="50000" style="width:600px; height:250px">
+      <textbox class="display" name="output_text" id="output_text" maxlength="50000">
         {% for sentence in output_summary %}
         <h4>{{ sentence }} </h4>
         {% endfor %}
