--- a/Project/website/templates/index_record.html
+++ b/Project/website/templates/index_record.html
@@ -130,7 +130,7 @@
     <h2>Text Summarization</h2>
     <div class="form-container jumbotron" id-"sum-section">
 
-<audio id="myVideo" width="320" height="176" controls>
+<!-- <audio id="myVideo" width="320" height="176" controls>
   <source src="speech.wav" type="audio/x-wav">
   Your browser does not support HTML5 audio.
 </audio>
@@ -140,7 +140,7 @@ var vid = document.getElementById("myVideo");
 vid.onplay = function() {
     alert("The audio has started to play");
 };
-</script>
+</script> -->
 
       <form id="mytext" method = "POST" action = "#" >
         <input type="submit" name="Translate" value="Translate Live">
