--- a/Project/website/templates/index_upload.html
+++ b/Project/website/templates/index_upload.html
@@ -1,13 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Meeting Text Memo</title>
-  <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
+    <title>Meeting Memo</title>
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.4.2.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
+    <script type="text/javascript" charset="utf-8"></script>
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
+    <header id="header">
+      <ul class="actions">
+      <li><a href="index" class="button">Home</a></li>
+      <li><a href="record" class="button">Record</a></li>
+      <li><a href="upload" class="button">Upload</a></li>
+      </ul>
+    </header>
+
 </head>
 
+
+
 <body>
-<header class="navbar">
+  <br>
+  <div style="float: left; width: 30%;">
+    <ul>
+    <header class="navbar">
 
 
   <h1>Upload audio File</h1>
@@ -18,10 +33,10 @@
     </form>
 
 
-</header>
-
-
-
+	</header>
+    </ul>
+  </div>
 
 </body>
+
 </html>
