check in before week 4

--- a/Project/website/templates/index.html
+++ b/Project/website/templates/index.html
@@ -15,13 +15,20 @@
     </header>
 
 	<section id="wrapper">
-		<h2><span >Meeting audio to text summaries</span></h2>
-	    <h3><span >Tony Tong</span></h3>
+		<center>
+		<h1><span >Meeting audio to text summaries</span></h1>
+	    <h2><span >Tony Tong</span></h2>
 		<p>
-			<span >
-			Currently in development
-			</span>
+			<h3 >
+			Currently in development, please let me know your comments!
+			</h3>
+			<h4>
+				click for a pre-loaded example
+			<li><a href="index_example" class="button">Example</a></li>
+			</h4>
+			<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRPmUi8ocedCTStgAXxk49afBpXo1R6hLsrtHQMrAWzkPBHXi2NdvqFNnZSWZYf3zfF24jkppo8OTsu/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 	    </p>
+		</center>
 	</section>
 </head>
 
