website has all features

--- a/Project/website/templates/index.html
+++ b/Project/website/templates/index.html
@@ -8,31 +8,30 @@
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
     <header id="header">
     	<ul class="actions">
-	    <li><a href="index" class="button">Home</a></li>
-	    <li><a href="record" class="button">Record</a></li>
-	    <li><a href="upload" class="button">Upload</a></li>
+      <li><a href="index" class="button">Home</a></li>
+      <li><a href="summary" class="button">Summary</a></li>
+      <li><a href="record" class="button">Record</a></li>
+      <li><a href="upload" class="button">Upload</a></li>
+      <li><a href="example" class="button">Example</a></li>
 	    </ul>
     </header>
-
-	<section id="wrapper">
-		<center>
-		<h1><span >Meeting audio to text summaries</span></h1>
-	    <h2><span >Tony Tong</span></h2>
-		<p>
-			<h3 >
-			Currently in development, please let me know your comments!
-			</h3>
-			<h4>
-				click for a pre-loaded example
-			<li><a href="index_example" class="button">Example</a></li>
-			</h4>
-			<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRPmUi8ocedCTStgAXxk49afBpXo1R6hLsrtHQMrAWzkPBHXi2NdvqFNnZSWZYf3zfF24jkppo8OTsu/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-	    </p>
-		</center>
-	</section>
 </head>
 
 <body>
+	<center>
+		<br>
+		<h1>Meeting audio to text summaries</h1>
+	    <h3>Tony Tong</h3>
+		<p>
+			<h3 >
+				Currently in development, please let me know your comments!
+			</h3>
+			<h4>
+				Please see slides below for the product details
+			</h4>
+			<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRPmUi8ocedCTStgAXxk49afBpXo1R6hLsrtHQMrAWzkPBHXi2NdvqFNnZSWZYf3zfF24jkppo8OTsu/embed?start=false&loop=false&delayms=3000" frameborder="0" width="1000" height="600" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+	    </p>
+	</center>
 
 </body>
 
