--- a/Project/website/templates/index_example.html
+++ b/Project/website/templates/index_example.html
@@ -9,14 +9,12 @@
     <header id="header">
       <ul class="actions">
       <li><a href="index" class="button">Home</a></li>
+      <li><a href="summary" class="button">Summary</a></li>
       <li><a href="record" class="button">Record</a></li>
       <li><a href="upload" class="button">Upload</a></li>
+      <li><a href="example" class="button">Example</a></li>
       </ul>
     </header>
-
-
-
-
 
 
   <br>
