--- a/Project/website/templates/index_upload.html
+++ b/Project/website/templates/index_upload.html
@@ -9,8 +9,10 @@
     <header id="header">
       <ul class="actions">
       <li><a href="index" class="button">Home</a></li>
+      <li><a href="summary" class="button">Summary</a></li>
       <li><a href="record" class="button">Record</a></li>
       <li><a href="upload" class="button">Upload</a></li>
+      <li><a href="example" class="button">Example</a></li>
       </ul>
     </header>
 
@@ -20,20 +22,36 @@
 
 <body>
   <br>
-  <div style="float: left; width: 30%;">
+  <div style="float: center;">
     <ul>
     <header class="navbar">
 
+    <h1>Upload audio File</h1>
+    <h3>Please upload a wav/mp3 file, with size less than 16 Mb</h3>
+    <form method=post enctype=multipart/form-data>
+        <input type=file name=file accept="audio/*" capture id="recorder">
+        <br><br>
+        <h4>Inspect the audio, if you want</h4>
+        <audio id="player" controls></audio>
+        <br><br>
+        <h4>Upload the audio</h4>
+        <input type=submit value="Upload your wav/mp3/ogg file">
+      </form>
 
-  <h1>Upload audio File</h1>
-  <h2>please upload a wav file with size less than 16 Mb</h2>
-  <form method=post enctype=multipart/form-data>
-      <input type=file name=file>
-      <input type=submit value="Upload your wav file">
-    </form>
 
+    </header>
 
-	</header>
+    
+    <script>
+      var recorder = document.getElementById('recorder');
+      var player = document.getElementById('player');
+
+      recorder.addEventListener('change', function(e) {
+        var file = e.target.files[0];
+        // Do something with the audio file.
+        player.src =  URL.createObjectURL(file);
+      });
+      </script>
     </ul>
   </div>
 
