--- a/Project/website/templates/index.html
+++ b/Project/website/templates/index.html
@@ -20,15 +20,30 @@
 <body>
 	<center>
 		<br>
-		<h1>Meeting audio to text summaries</h1>
-	    <h3>Tony Tong</h3>
+		<h1>Welcome to MeetingMemo</h1>
+		<h2><span style='background-color: #FF7F50'> You meet, we take minutes. </span></h2>
+		<div style="float: left; width: 50%;">
+			<ul style="list-style-type:none">
+		      <li>This web API converts audio to text summaries.</li>
+		      <li>It translates an audio to English sentences;</li>
+		      <li>Presents the highlight sentences;</li>
+		      <li>Also supports keywords and full transcript.</li>
+		    </ul>
+		</div>
+		<div style="float: right; width: 50%;">
+			<ul style="list-style-type:none">
+		      <li>To see audio to text summary in action click Summary;</li>
+		      <li>To record a live audio, click Record;</li>
+		      <li>To upload your audio, click Upload;</li>
+		      <li>To see the source code, <a href="https://github.com/tongbaojia/Insight/tree/master/Project/website">Git link</a>.</li>
+		    </ul>
+		</div>
+
+		<br>
 		<p>
-			<h3 >
-				Currently in development, please let me know your comments!
+			<h3>
+				To learn more about MeetingMemo, please see the slides:
 			</h3>
-			<h4>
-				Please see slides below for the product details
-			</h4>
 			<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRPmUi8ocedCTStgAXxk49afBpXo1R6hLsrtHQMrAWzkPBHXi2NdvqFNnZSWZYf3zfF24jkppo8OTsu/embed?start=false&loop=false&delayms=3000" frameborder="0" width="1000" height="600" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 	    </p>
 	</center>
