--- a/Project/website/templates/index_summary.html
+++ b/Project/website/templates/index_summary.html
@@ -2,8 +2,6 @@
 <html>
 <head>
     <title>Meeting Memo</title>
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.4.2.min.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
     <script type="text/javascript" charset="utf-8"></script>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
     <header id="header">
@@ -23,16 +21,57 @@
 <body>
   <div align="center">
     <br>
-    <h1>Text Summarization</h1>
-    <div class="form-container jumbotron" id-"sum-section">
+    <h1>Audio to text summary</h1>
+    
+  <div align="left" style="float: left; width: 48%;">
+      <center>
       <h3>Click the Record/Upload button above, if you want another file</h3>
+      </center>
+      
+      <br><br><br><br>
+      
+      <h2><center>Highlight sentence</center></h2>
+      <textbox class="display" name="output_sentence" id="output_sentence" maxlength="50000">
+        <ul>
+        {% for sentence in output_sentence %}
+          <li><h3><font color='#DC143C'>{{ sentence }} </font></h3></li>
+        {% endfor %}
+        </ul>
+      </textbox>
+
+      
+      <h2><center>Key words</center></h2>
+      <textbox class="display" name="output_text" id="output_text" maxlength="50000">
+        <center>
+        <h3>{% for keywords in output_text %}
+        <font color='#002147'>#{{ keywords }} </font>
+        {% endfor %}</h3>
+        </center>
+      <left>
+      </textbox>
+  </div>
+
+  <div align="left" style="float: right; width: 48%;">
+    <div class="form-container jumbotron" id-"sum-section">
+      <form class="form-inline well" id="mytext" method = "POST" action="\summary">
       <h3>Please choose a file to summarize</h3>
-      <form id="mytext" method = "POST" action="#">
       <select name="TranslateFile" value="TranslateFile" style="width:200px;">
         {% for tmpfile in tmpfiles %}
           <option value="{{ tmpfile }}">{{ tmpfile }}</option>
         {% endfor %}
       </select>
+<!--       Number of keywords:
+      <select name="Nkeywords" value="Nkeywords" style="width:200px;">
+          <option value=3>3</option>
+          <option value=5>5</option>
+          <option value=7>7</option>
+      </select>
+      Fraction of highlights:
+      <select name="Nsentences" value="Nsentences" style="width:200px;">
+          <option value=0.1>0.1</option>
+          <option value=0.2>0.2</option>
+          <option value=0.3>0.3</option>
+      </select> -->
       <br>
       <input type="submit" value="Translate"></button>
       </form>
@@ -40,35 +79,14 @@
         <input type="submit" name="Translate" value="Translate Live">
         <input type="submit" name="TestSample" value="TestSample">
       </form> -->
-      <h2></h2>
-  </div>
-  <div align="left" style="margin-left:20px">
-      <h3>Active Audio Length: {{ audio_length }}</h3>
-      <h3>Key sentence: </h3>
-      <textbox class="display" name="output_sentence" id="output_sentence" maxlength="50000">
-        <h4>{% for sentence in output_sentence %}
-        {{ sentence  }} 
-        {% endfor %}</h4>
-      </textbox>
-      <h3>Key Words: </h3>
-      <textbox class="display" name="output_text" id="output_text" maxlength="50000">
-        <h4>{% for keywords in output_text %}
-        {{ keywords  }} 
-        {% endfor %}</h4>
-      <left>
-      </textbox>
-      <h3>Original Text:</h3>
+    </div>
+
+    <h2><center>Full transcript</center></h2>
+        <center><h4>Active audio length {{ audio_length }}</h4></center>
         {% for sentence in original_text %}
         <h4>{{ sentence|safe }} </h4>
         {% endfor %}
-      </ul>
   </div>
-
-    <script src="scripts/install.js"></script>
-
-    <script src="scripts/fill.js"></script>
-
-    <script src="scripts/app.js"></script>
 </body>
 
 
