--- a/Project/website/templates/index.html
+++ b/Project/website/templates/index.html
@@ -21,7 +21,7 @@
 	<center>
 		<br>
 		<h1>Welcome to MeetingMemo</h1>
-		<h2><span style='background-color: #FF7F50'> You meet, we take minutes. </span></h2>
+		<h2><span style='background-color: #ccffcc'> You meet, we take minutes. </span></h2>
 		<div style="float: left; width: 50%;">
 			<ul style="list-style-type:none">
 		      <li>This web API converts audio to text summaries.</li>
