--- a/Project/website/static/style.css
+++ b/Project/website/static/style.css
@@ -971,7 +971,7 @@
 
     #header {
         background-color: #A51C30;
-        color: #A51C30;
+        color: #0066ff;
         cursor: default;
         font-size: 1.1em;
         height: 6em;
