--- a/Project/website/templates/index.html
+++ b/Project/website/templates/index.html
@@ -20,7 +20,7 @@
 <body>
 	<center>
 		<br>
-		<h1>Welcome to MeetingMemo</h1>
+		<h1>Welcome to <span style='background-color: #0066cc'><font color='#FFFFFF' >Meeting</font></span><font color='#0066cc'>Memo</font></h1>
 		<h2><span style='background-color: #ccffcc'> You meet, we take minutes. </span></h2>
 		<div style="float: left; width: 50%;">
 			<ul style="list-style-type:none">
