--- a/Project/website/templates/index_summary.html
+++ b/Project/website/templates/index_summary.html
@@ -60,6 +60,19 @@
           <option value="{{ tmpfile }}">{{ tmpfile }}</option>
         {% endfor %}
       </select>
+      
+<!--       <audio id="player" controls></audio>
+      <script>
+        function loadSong(songNo) {
+          var player=document.getElementById('player');
+          var sourceMp3=document.getElementById('mytext');
+          sourceMp3.src= songNo;
+
+          player.load();
+          player.play();
+        }
+      </script> -->
+
 <!--       Number of keywords:
       <select name="Nkeywords" value="Nkeywords" style="width:200px;">
           <option value=3>3</option>
