--- a/Project/website/static/style.css
+++ b/Project/website/static/style.css
@@ -822,7 +822,7 @@
         -o-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
         -ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
         transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-        background-color: #3cadd4;
+        background-color: #0CC2EE;
         border-radius: 30px;
         border: 0;
         color: #ffffff !important;
@@ -841,7 +841,7 @@
         input[type="reset"]:hover,
         input[type="button"]:hover,
         .button:hover {
-            background-color: #51b6d9;
+            background-color: #2407F4;
             text-decoration: none;
         }
 
@@ -849,7 +849,7 @@
         input[type="reset"]:active,
         input[type="button"]:active,
         .button:active {
-            background-color: #2da2ca;
+            background-color: #0CC2EE;
             text-decoration: none;
         }
 
@@ -860,12 +860,12 @@
             padding-left: 1.35em;
         }
 
-            input[type="submit"].icon:before,
-            input[type="reset"].icon:before,
-            input[type="button"].icon:before,
-            .button.icon:before {
-                margin-right: 0.5em;
-            }
+        input[type="submit"].icon:before,
+        input[type="reset"].icon:before,
+        input[type="button"].icon:before,
+        .button.icon:before {
+            margin-right: 0.5em;
+        }
 
         input[type="submit"].fit,
         input[type="reset"].fit,
@@ -899,26 +899,26 @@
             color: #474747 !important;
         }
 
-            input[type="submit"].alt:hover,
-            input[type="reset"].alt:hover,
-            input[type="button"].alt:hover,
-            .button.alt:hover {
-                background-color: rgba(144, 144, 144, 0.075);
-            }
+        input[type="submit"].alt:hover,
+        input[type="reset"].alt:hover,
+        input[type="button"].alt:hover,
+        .button.alt:hover {
+            background-color: rgba(144, 144, 144, 0.075);
+        }
 
-            input[type="submit"].alt:active,
-            input[type="reset"].alt:active,
-            input[type="button"].alt:active,
-            .button.alt:active {
-                background-color: rgba(144, 144, 144, 0.2);
-            }
+        input[type="submit"].alt:active,
+        input[type="reset"].alt:active,
+        input[type="button"].alt:active,
+        .button.alt:active {
+            background-color: rgba(144, 144, 144, 0.2);
+        }
 
-            input[type="submit"].alt.icon:before,
-            input[type="reset"].alt.icon:before,
-            input[type="button"].alt.icon:before,
-            .button.alt.icon:before {
-                color: #858585;
-            }
+        input[type="submit"].alt.icon:before,
+        input[type="reset"].alt.icon:before,
+        input[type="button"].alt.icon:before,
+        .button.alt.icon:before {
+            color: #858585;
+        }
 
         input[type="submit"].special,
         input[type="reset"].special,
@@ -928,19 +928,19 @@
             color: #ffffff !important;
         }
 
-            input[type="submit"].special:hover,
-            input[type="reset"].special:hover,
-            input[type="button"].special:hover,
-            .button.special:hover {
-                background-color: #444751;
-            }
+        input[type="submit"].special:hover,
+        input[type="reset"].special:hover,
+        input[type="button"].special:hover,
+        .button.special:hover {
+            background-color: #444751;
+        }
 
-            input[type="submit"].special:active,
-            input[type="reset"].special:active,
-            input[type="button"].special:active,
-            .button.special:active {
-                background-color: #2c2f35;
-            }
+        input[type="submit"].special:active,
+        input[type="reset"].special:active,
+        input[type="button"].special:active,
+        .button.special:active {
+            background-color: #2c2f35;
+        }
 
         input[type="submit"].disabled, input[type="submit"]:disabled,
         input[type="reset"].disabled,
@@ -970,7 +970,7 @@
         }
 
     #header {
-        background-color: #A51C30;
+        background-color: #0066cc;
         color: #0066ff;
         cursor: default;
         font-size: 1.1em;
@@ -1047,7 +1047,7 @@
                     }
 
         #header .container {
-            background-color: #A51C30;
+            background-color: #0066cc;
             position: relative;
         }
 
