--- a/Project/website/templates/index.html
+++ b/Project/website/templates/index.html
@@ -26,7 +26,7 @@
 			<ul style="list-style-type:none">
 		      <li>This web API converts audio to text summaries.</li>
 		      <li>It translates an audio to English sentences;</li>
-		      <li>Presents the highlight sentences;</li>
+		      <li>And presents the highlight sentences;</li>
 		      <li>Also supports keywords and full transcript.</li>
 		    </ul>
 		</div>
@@ -42,7 +42,7 @@
 		<br>
 		<p>
 			<h3>
-				To learn more about MeetingMemo, please see the slides:
+				To learn more about <span style='background-color: #0066cc'><font color='#FFFFFF' >Meeting</font></span><font color='#0066cc'>Memo</font>, please see the slides:
 			</h3>
 			<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRPmUi8ocedCTStgAXxk49afBpXo1R6hLsrtHQMrAWzkPBHXi2NdvqFNnZSWZYf3zfF24jkppo8OTsu/embed?start=false&loop=false&delayms=3000" frameborder="0" width="1000" height="600" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 	    </p>
