--- a/Project/website/templates/index_summary.html
+++ b/Project/website/templates/index_summary.html
@@ -25,7 +25,7 @@
     
   <div align="left" style="float: left; width: 48%;">
       <center>
-      <h3>Click the Record/Upload button above, if you want another file</h3>
+      <h3>Click the Record/Upload button above for your own file</h3>
       </center>
       
       <br><br><br><br>
