--- a/Project/website/templates/index_upload.html
+++ b/Project/website/templates/index_upload.html
@@ -26,7 +26,7 @@
     <ul>
     <header class="navbar">
 
-    <h1>Upload your audio File</h1>
+    <h1>Upload audio File</h1>
     <h3>Choose your local wav/mp3 file, with size less than 16 Mb.</h3>
     <br>
     <form method=post enctype=multipart/form-data>
