--- a/Project/website/templates/index.html
+++ b/Project/website/templates/index.html
@@ -20,7 +20,7 @@
 <body>
 	<center>
 		<br>
-		<h1>Welcome to <span style='background-color: #0066cc'><font color='#FFFFFF' >Meeting</font></span><font color='#0066cc'>Memo</font></h1>
+		<h1>Welcome to <span style='background-color: #0066cc'><font color='#FFFFFF' >MeetingMemo</font></span></h1>
 		<h2><span style='background-color: #ccffcc'> You meet, we take minutes. </span></h2>
 		<div style="float: left; width: 50%;">
 			<ul style="list-style-type:none">
@@ -42,7 +42,7 @@
 		<br>
 		<p>
 			<h3>
-				To learn more about <span style='background-color: #0066cc'><font color='#FFFFFF' >Meeting</font></span><font color='#0066cc'>Memo</font>, please see the slides:
+				To learn more about <span style='background-color: #0066cc'><font color='#FFFFFF' >MeetingMemo</font></span>, please see the slides:
 			</h3>
 			<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRPmUi8ocedCTStgAXxk49afBpXo1R6hLsrtHQMrAWzkPBHXi2NdvqFNnZSWZYf3zfF24jkppo8OTsu/embed?start=false&loop=false&delayms=3000" frameborder="0" width="1000" height="600" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 	    </p>
