--- a/Project/website/templates/index_summary.html
+++ b/Project/website/templates/index_summary.html
@@ -42,8 +42,8 @@
             player.play(sourceMp3);
         </script> -->
         <div align="left" style="float: right; width: 50%;">
-          <h3> Choose your fraction of highlight: <input type="number" name="Nsentences" value="20" min="1" max="99" style="width:50px;display: inline;"></h3>
-          <h3> Choose your number of keyword: <input type="number" name="Nkeywords" value="5" min="1" max="100" style="width:50px;display: inline;"></h3>
+          <h3> Choose your percentage of highlights: <input type="number" name="Nsentences" value="20" min="1" max="99" style="width:50px;display: inline;"></h3>
+          <h3> Choose your number of keywords: <input type="number" name="Nkeywords" value="5" min="1" max="100" style="width:50px;display: inline;"></h3>
         </div>
         <div align="center" style="float: left; width: 100%;">
           <input type="submit" value="Translate">
