--- a/Project/website/templates/index_example.html
+++ b/Project/website/templates/index_example.html
@@ -34,7 +34,7 @@
       
       <br><br><br><br>
       
-      <h2><center>Highlight sentence</center></h2>
+      <h2><center>Highlight sentences</center></h2>
       <textbox class="display" name="output_sentence" id="output_sentence" maxlength="50000">
         <ul>
         
